# blog-samples

./: README.md  SAMPLE_README_TEMPLATE.md
find-the-loop/: README.md  benchmark-notes.md  models.candidate-128k.json  models.candidate-65k.json  models.candidate-96k.json  models.original.json  pi-continue.candidate.json  settings.candidate-128k.json  settings.candidate-65k.json  settings.candidate-96k.json  settings.original.json  start-llama-server.ps1
skills/sketch-to-text/: SKILL.md
skills/sketch-to-text/evals/: README.md
skills/sketch-to-text/evals/ground-truth/: _quarto.yml  diagram-1.expected.qmd  diagram-2.expected.qmd  diagram-3.expected.qmd  diagram-4.expected.qmd  diagram-5.expected.qmd  diagram-6.expected.qmd
skills/sketch-to-text/references/: conversion-guide.md  output-templates.md  troubleshooting.md
tts-kitty/: .gitignore  README.md  pyproject.toml
tts-kitty/scripts/: audio_playback.py  cli_common.py  generate_kittentts.py  kittentts_generate.py  run_tts.py  stream_kittentts.py
tts-kitty/src/kitty_test/: cli.py
